--- a/st.css
+++ b/st.css
@@ -1,6 +1,12 @@
 body{
-    background-color: rgb(236, 248, 233);
+    background-color: rgb(255, 255, 255);
+    /* display: flex; */
 }
 a{
     margin-left: 10px;
+}
+#preloader{
+    display: flex;
+    justify-content: center;
+
 }
